<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_calendar_fragment"
        android:title="@string/calendar_of_task"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionToggleBarBorders"
        android:title="@string/actionToggleBarBorders"
        android:orderInCategory="100"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/actionToggleValues"
        android:title="@string/actionToggleValues"
        android:orderInCategory="100"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/actionToggleIcons"
        android:title="@string/actionToggleIcons"
        android:orderInCategory="100"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/actionToggleHighlight"
        android:title="@string/actionToggleHighlight"
        android:orderInCategory="100"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/actionTogglePinch"
        android:title="@string/actionTogglePinch"
        android:orderInCategory="100"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/actionToggleAutoScaleMinMax"
        android:title="@string/actionToggleAutoScale"
        android:orderInCategory="100"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/animateX"
        android:title="@string/animateX"
        android:orderInCategory="100"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/animateY"
        android:title="@string/animateY"
        android:orderInCategory="100"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/animateXY"
        android:title="@string/animateXY"
        android:orderInCategory="100"
        app:showAsAction="never">
    </item>

</menu>