<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">
    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/repeat_at"
        android:textSize="12sp"/>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/monday_input"
            android:layout_marginEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            android:textAlignment="center"
            android:paddingTop="2dp"
            android:background="@drawable/bg_text_view_circle"/>
        <TextView
            android:id="@+id/tuesday_input"
            android:layout_marginEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            android:textAlignment="center"
            android:paddingTop="2dp"
            android:background="@drawable/bg_text_view_circle"/>
        <TextView
            android:id="@+id/wendesday_input"
            android:layout_marginEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wendesday"
            android:textAlignment="center"
            android:paddingTop="2dp"
            android:background="@drawable/bg_text_view_circle"/>
        <TextView
            android:id="@+id/thursday_input"
            android:layout_marginEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thursday"
            android:textAlignment="center"
            android:paddingTop="2dp"
            android:background="@drawable/bg_text_view_circle"/>
        <TextView
            android:id="@+id/friday_input"
            android:layout_marginEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friday"
            android:textAlignment="center"
            android:paddingTop="2dp"
            android:background="@drawable/bg_text_view_circle"/>
        <TextView
            android:id="@+id/saturday_input"
            android:layout_marginEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturday"
            android:textAlignment="center"
            android:paddingTop="2dp"
            android:background="@drawable/bg_text_view_circle"/>
        <TextView
            android:id="@+id/sunday_input"
            android:layout_marginEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            android:textAlignment="center"
            android:paddingTop="2dp"
            android:background="@drawable/bg_text_view_circle"/>

    </LinearLayout>
</LinearLayout>