<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/end"
        android:textSize="12sp"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:id="@+id/never_radio_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/never_radio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/never_radio"
            android:textSize="18sp" />
    </LinearLayout>
    <View
        android:layout_marginStart="32dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black" />
    <LinearLayout
        android:id="@+id/the_day_radio_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:id="@+id/the_day_radio"
            android:textSize="18sp"
            android:text="@string/the_day_radio"/>
        <TextView
            android:layout_weight="7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:id="@+id/the_day_tv"
            android:textSize="18sp"
            android:textAlignment="center"
            android:background="@color/grey_background_input"
            android:text="1 ago 2019"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="8"/>
    </LinearLayout>
    <View
        android:layout_marginStart="32dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"

        android:background="@color/black" />
    <LinearLayout
        android:id="@+id/after_radio_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:id="@+id/after_radio"
            android:text="@string/after_input_recurrence_radio"/>
        <EditText
            android:id="@+id/after_number_occurrence_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="true"
            android:textIsSelectable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:padding="12dp"
            android:layout_weight="11"
            android:background="@drawable/rounded_corner_input"
            android:ems="2"
            android:inputType="numberDecimal"
            android:maxLength="2"
            android:text="@string/number_occurrences"
            android:textAlignment="center"
            android:textSize="18sp" />
        <TextView
            android:layout_weight="9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/occurrence_text"/>
        <LinearLayout
            android:id="@+id/after_final_layout"
            android:layout_weight="9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"/>
    </LinearLayout>
</LinearLayout>