<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/cancel_edit_task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_btn"
                    style="@style/edit_task_button"
                    android:background="@drawable/bg_color_change_cancel_btn"
                    android:layout_weight="6"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="4"></LinearLayout>
                <Button
                    android:id="@+id/save_edit_task"
                    android:layout_gravity="right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save_btn"
                    android:background="@drawable/bg_color_change_save_btn"
                    style="@style/edit_task_button"
                    android:layout_weight="6"/>
            </LinearLayout>

            <EditText
                android:id="@+id/title_task"
                android:layout_marginTop="18dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/whiteBackgroundActivity"
                android:hint="@string/hint_title"
                android:inputType="textPersonName"
                android:textSize="20sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/black" />
            <LinearLayout
                android:layout_marginTop="18dp"
                android:layout_marginStart="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/userProfileLayout">
                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_user_img"
                    android:layout_marginEnd="16dp"/>
                <TextView
                    android:id="@+id/email_tv"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_email_fake"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/black" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginStart="18dp"
                android:orientation="horizontal"
                android:id="@+id/allDayLayout">
                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_open_24_hours"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/all_day_text"
                        android:layout_marginStart="16dp"
                        android:layout_weight="2"/>

                    <Switch
                        android:id="@+id/switchAllDay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="7"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginStart="18dp"
                android:orientation="horizontal"
                android:id="@+id/startDateLayout">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date_fake"
                    android:layout_marginStart="44dp"
                    android:layout_weight="2"
                    android:id="@+id/starDateText"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_hour_fake"
                    android:layout_weight="6"
                    android:layout_marginEnd="16dp"
                    android:textAlignment="textEnd"
                    android:id="@+id/starHourText"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginStart="18dp"
                android:orientation="horizontal"
                android:id="@+id/endDateLayout">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date_fake"
                    android:layout_marginStart="44dp"
                    android:layout_weight="2"
                    android:id="@+id/endDateText"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_hour_fake"
                    android:layout_weight="6"
                    android:layout_marginEnd="16dp"
                    android:textAlignment="textEnd"
                    android:id="@+id/endHourText"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginStart="18dp"
                android:orientation="horizontal"
                android:id="@+id/repeatLayout">
                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/circular_arrow"
                    android:layout_marginEnd="16dp"/>
                <TextView
                    android:id="@+id/repeat_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/repeat_task_text"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/black" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginStart="18dp"
                android:orientation="horizontal"
                android:id="@+id/categoryLayout">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:layout_weight="3"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginEnd="19dp"
                        android:layout_gravity="start"
                        android:src="@drawable/category" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/category_task"
                        android:gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="2"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="55dp"
                        android:textAlignment="center"
                        android:gravity="center|end"
                        android:layout_gravity="end"
                        android:id="@+id/selected_category"
                        android:text="@string/c0"/>
                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginStart="18dp"
                android:orientation="horizontal"
                android:id="@+id/colorLayout">
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/colorSpinner"></Spinner>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginStart="18dp"
                android:orientation="horizontal"
                android:id="@+id/priorityLayout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_text"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="26dp"
                    android:id="@+id/priorityText"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="16dp"
                    android:id="@+id/prioritySpinner"></Spinner>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginStart="18dp"
                android:orientation="horizontal"
                android:id="@+id/descriptionLayout">
                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/red"/>
                <EditText
                    android:id="@+id/description_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/whiteBackgroundActivity"
                    android:inputType="text"
                    android:hint="@string/add_description"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>